packages/fb_connector/lib/src/ffi/fb_bindings.dart


  late final _isc_sqlcodePtr =
      _lookup<ffi.NativeFunction<ISC_LONG Function(ffi.Pointer<ISC_STATUS>)>>(
          'isc_sqlcode');
  late final _isc_sqlcode =
      _isc_sqlcodePtr.asFunction<int Function(ffi.Pointer<ISC_STATUS>)>();

  void isc_sqlcode_s(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<ISC_ULONG> arg1,
  ) {
    return _isc_sqlcode_s(
      arg0,
      arg1,
    );
  }

  late final _isc_sqlcode_sPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<ISC_ULONG>)>>('isc_sqlcode_s');
  late final _isc_sqlcode_s = _isc_sqlcode_sPtr.asFunction<
      void Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<ISC_ULONG>)>();

  void fb_sqlstate(
    ffi.Pointer<ffi.Int8> arg0,
    ffi.Pointer<ISC_STATUS> arg1,
  ) {
    return _fb_sqlstate(
      arg0,
      arg1,
    );
  }

  late final _fb_sqlstatePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Int8>, ffi.Pointer<ISC_STATUS>)>>('fb_sqlstate');
  late final _fb_sqlstate = _fb_sqlstatePtr.asFunction<
      void Function(ffi.Pointer<ffi.Int8>, ffi.Pointer<ISC_STATUS>)>();

  void isc_sql_interprete(
    int arg0,
    ffi.Pointer<ISC_SCHAR> arg1,
    int arg2,
  ) {
    return _isc_sql_interprete(
      arg0,
      arg1,
      arg2,
    );
  }

  late final _isc_sql_interpretePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int16, ffi.Pointer<ISC_SCHAR>,
              ffi.Int16)>>('isc_sql_interprete');
  late final _isc_sql_interprete = _isc_sql_interpretePtr
      .asFunction<void Function(int, ffi.Pointer<ISC_SCHAR>, int)>();

  int isc_transaction_info(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_tr_handle> arg1,
    int arg2,
    ffi.Pointer<ISC_SCHAR> arg3,
    int arg4,
    ffi.Pointer<ISC_SCHAR> arg5,
  ) {
    return _isc_transaction_info(
      arg0,
      arg1,
      arg2,
      arg3,
      arg4,
      arg5,
    );
  }

  late final _isc_transaction_infoPtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_tr_handle>,
              ffi.Int16,
              ffi.Pointer<ISC_SCHAR>,
              ffi.Int16,
              ffi.Pointer<ISC_SCHAR>)>>('isc_transaction_info');
  late final _isc_transaction_info = _isc_transaction_infoPtr.asFunction<
      int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<isc_tr_handle>, int,
          ffi.Pointer<ISC_SCHAR>, int, ffi.Pointer<ISC_SCHAR>)>();

  int isc_transact_request(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_db_handle> arg1,
    ffi.Pointer<isc_tr_handle> arg2,
    int arg3,
    ffi.Pointer<ISC_SCHAR> arg4,
    int arg5,
    ffi.Pointer<ISC_SCHAR> arg6,
    int arg7,
    ffi.Pointer<ISC_SCHAR> arg8,
  ) {
    return _isc_transact_request(
      arg0,
      arg1,
      arg2,
      arg3,
      arg4,
      arg5,
      arg6,
      arg7,
      arg8,
    );
  }

  late final _isc_transact_requestPtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_db_handle>,
              ffi.Pointer<isc_tr_handle>,
              ffi.Uint16,
              ffi.Pointer<ISC_SCHAR>,
              ffi.Uint16,
              ffi.Pointer<ISC_SCHAR>,
              ffi.Uint16,
              ffi.Pointer<ISC_SCHAR>)>>('isc_transact_request');
  late final _isc_transact_request = _isc_transact_requestPtr.asFunction<
      int Function(
          ffi.Pointer<ISC_STATUS>,
          ffi.Pointer<isc_db_handle>,
          ffi.Pointer<isc_tr_handle>,
          int,
          ffi.Pointer<ISC_SCHAR>,
          int,
          ffi.Pointer<ISC_SCHAR>,
          int,
          ffi.Pointer<ISC_SCHAR>)>();

  int isc_vax_integer(
    ffi.Pointer<ISC_SCHAR> arg0,
    int arg1,
  ) {
    return _isc_vax_integer(
      arg0,
      arg1,
    );
  }

  late final _isc_vax_integerPtr = _lookup<
      ffi.NativeFunction<
          ISC_LONG Function(
              ffi.Pointer<ISC_SCHAR>, ffi.Int16)>>('isc_vax_integer');
  late final _isc_vax_integer = _isc_vax_integerPtr
      .asFunction<int Function(ffi.Pointer<ISC_SCHAR>, int)>();

  int isc_portable_integer(
    ffi.Pointer<ISC_UCHAR> arg0,
    int arg1,
  ) {
    return _isc_portable_integer(
      arg0,
      arg1,
    );
  }

  late final _isc_portable_integerPtr = _lookup<
      ffi.NativeFunction<
          ISC_INT64 Function(
              ffi.Pointer<ISC_UCHAR>, ffi.Int16)>>('isc_portable_integer');
  late final _isc_portable_integer = _isc_portable_integerPtr
      .asFunction<int Function(ffi.Pointer<ISC_UCHAR>, int)>();

  int isc_add_user(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<USER_SEC_DATA> arg1,
  ) {
    return _isc_add_user(
      arg0,
      arg1,
    );
  }

  late final _isc_add_userPtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<USER_SEC_DATA>)>>('isc_add_user');
  late final _isc_add_user = _isc_add_userPtr.asFunction<
      int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<USER_SEC_DATA>)>();

  int isc_delete_user(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<USER_SEC_DATA> arg1,
  ) {
    return _isc_delete_user(
      arg0,
      arg1,
    );
  }

  late final _isc_delete_userPtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<USER_SEC_DATA>)>>('isc_delete_user');
  late final _isc_delete_user = _isc_delete_userPtr.asFunction<
      int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<USER_SEC_DATA>)>();

  int isc_modify_user(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<USER_SEC_DATA> arg1,
  ) {
    return _isc_modify_user(
      arg0,
      arg1,
    );
  }

  late final _isc_modify_userPtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<USER_SEC_DATA>)>>('isc_modify_user');
  late final _isc_modify_user = _isc_modify_userPtr.asFunction<
      int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<USER_SEC_DATA>)>();

  /// /
  int isc_compile_request(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_db_handle> arg1,
    ffi.Pointer<isc_req_handle> arg2,
    int arg3,
    ffi.Pointer<ISC_SCHAR> arg4,
  ) {
    return _isc_compile_request(
      arg0,
      arg1,
      arg2,
      arg3,
      arg4,
    );
  }

  late final _isc_compile_requestPtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_db_handle>,
              ffi.Pointer<isc_req_handle>,
              ffi.Int16,
              ffi.Pointer<ISC_SCHAR>)>>('isc_compile_request');
  late final _isc_compile_request = _isc_compile_requestPtr.asFunction<
      int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<isc_db_handle>,
          ffi.Pointer<isc_req_handle>, int, ffi.Pointer<ISC_SCHAR>)>();

  int isc_compile_request2(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_db_handle> arg1,
    ffi.Pointer<isc_req_handle> arg2,
    int arg3,
    ffi.Pointer<ISC_SCHAR> arg4,
  ) {
    return _isc_compile_request2(
      arg0,
      arg1,
      arg2,
      arg3,
      arg4,
    );
  }

  late final _isc_compile_request2Ptr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_db_handle>,
              ffi.Pointer<isc_req_handle>,
              ffi.Int16,
              ffi.Pointer<ISC_SCHAR>)>>('isc_compile_request2');
  late final _isc_compile_request2 = _isc_compile_request2Ptr.asFunction<
      int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<isc_db_handle>,
          ffi.Pointer<isc_req_handle>, int, ffi.Pointer<ISC_SCHAR>)>();

  int isc_ddl(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_db_handle> arg1,
    ffi.Pointer<isc_tr_handle> arg2,
    int arg3,
    ffi.Pointer<ISC_SCHAR> arg4,
  ) {
    return _isc_ddl(
      arg0,
      arg1,
      arg2,
      arg3,
      arg4,
    );
  }

  late final _isc_ddlPtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_db_handle>,
              ffi.Pointer<isc_tr_handle>,
              ffi.Int16,
              ffi.Pointer<ISC_SCHAR>)>>('isc_ddl');
  late final _isc_ddl = _isc_ddlPtr.asFunction<
      int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<isc_db_handle>,
          ffi.Pointer<isc_tr_handle>, int, ffi.Pointer<ISC_SCHAR>)>();

  int isc_prepare_transaction(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_tr_handle> arg1,
  ) {
    return _isc_prepare_transaction(
      arg0,
      arg1,
    );
  }

  late final _isc_prepare_transactionPtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_tr_handle>)>>('isc_prepare_transaction');
  late final _isc_prepare_transaction = _isc_prepare_transactionPtr.asFunction<
      int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<isc_tr_handle>)>();

  int isc_receive(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_req_handle> arg1,
    int arg2,
    int arg3,
    ffi.Pointer<ffi.Void> arg4,
    int arg5,
  ) {
    return _isc_receive(
      arg0,
      arg1,
      arg2,
      arg3,
      arg4,
      arg5,
    );
  }

  late final _isc_receivePtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_req_handle>,
              ffi.Int16,
              ffi.Int16,
              ffi.Pointer<ffi.Void>,
              ffi.Int16)>>('isc_receive');
  late final _isc_receive = _isc_receivePtr.asFunction<
      int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<isc_req_handle>, int,
          int, ffi.Pointer<ffi.Void>, int)>();

  int isc_reconnect_transaction(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_db_handle> arg1,
    ffi.Pointer<isc_tr_handle> arg2,
    int arg3,
    ffi.Pointer<ISC_SCHAR> arg4,
  ) {
    return _isc_reconnect_transaction(
      arg0,
      arg1,
      arg2,
      arg3,
      arg4,
    );
  }

  late final _isc_reconnect_transactionPtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_db_handle>,
              ffi.Pointer<isc_tr_handle>,
              ffi.Int16,
              ffi.Pointer<ISC_SCHAR>)>>('isc_reconnect_transaction');
  late final _isc_reconnect_transaction =
      _isc_reconnect_transactionPtr.asFunction<
          int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<isc_db_handle>,
              ffi.Pointer<isc_tr_handle>, int, ffi.Pointer<ISC_SCHAR>)>();

  int isc_release_request(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_req_handle> arg1,
  ) {
    return _isc_release_request(
      arg0,
      arg1,
    );
  }

  late final _isc_release_requestPtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_req_handle>)>>('isc_release_request');
  late final _isc_release_request = _isc_release_requestPtr.asFunction<
      int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<isc_req_handle>)>();

  int isc_request_info(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_req_handle> arg1,
    int arg2,
    int arg3,
    ffi.Pointer<ISC_SCHAR> arg4,
    int arg5,
    ffi.Pointer<ISC_SCHAR> arg6,
  ) {
    return _isc_request_info(
      arg0,
      arg1,
      arg2,
      arg3,
      arg4,
      arg5,
      arg6,
    );
  }
